# RepoMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  OpenAI_Build_Week_Rules.md  README.md  RepoMind_Spec.md  artifacts.py  main.py  master.py  native_agents.py  preflight.py  pyproject.toml  repomind_cli.py  repomind_mcp.py  repository.py  requirements.txt  schemas.py  settings.py  worker.py
.github/workflows/: ci.yml
docs/: DEMO_PROOF_CHECKLIST.md  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  JUDGE_PATH.md  SUBMISSION_HANDOFF.md
docs/examples/flask/: AGENTS.md  README.md  repository-map.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  RepoMind.css  RepoMindApp.test.tsx  RepoMindApp.tsx  api.test.ts  api.ts  index.css  types.ts
frontend/src/components/: AgentGlyph.tsx  BrandMark.tsx  ExecutionTrace.test.tsx  ExecutionTrace.tsx  FirewallPanel.test.tsx  FirewallPanel.tsx
frontend/src/test/: fixtures.ts
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-18/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  test_agent_native.py  test_api.py  test_api_progress.py  test_orchestration.py  test_repository.py
workers/: __init__.py  _shared.py  architecture.py  history.py  risk.py  testing.py
