[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "repomind"
version = "1.0.0"
description = "Evidence-backed repository change preflight for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "openai==2.46.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "mcp==1.28.1",
]

[project.scripts]
repomind = "repomind_cli:main"
repomind-mcp = "repomind_mcp:main"

[tool.setuptools]
py-modules = [
  "artifacts",
  "main",
  "master",
  "native_agents",
  "preflight",
  "repomind_cli",
  "repomind_mcp",
  "repository",
  "schemas",
  "settings",
  "worker",
]

[tool.setuptools.packages.find]
include = ["workers*"]
